Step Two Completed.

--- a/index.html
+++ b/index.html
@@ -21,5 +21,25 @@
     My favourite is Nutella and sliced banana. 
     </p>
   </div>
-  
+  <div class = "kitchen-equipment"> 
+    </div>
+  <div class = "textSection"> 
+    <h3> EQUIPMENT
+      </h3 
+      
+      <ul>
+
+      <li>Cake Tin or Muffin Tray </li> 
+      <li> Large Mixing Bowl </li>
+      <li> Electric Mixer </li>
+      <li> Cooling Rack </li>
+      <li> Fork </li> 
+      <li> Weighing Scales </li>
+      <li> Smaller Bowls, To Hold Ingredients </li>
+
+        </ul>
+    </div>
+    <div class = "cake-ingredients"> 
+
+      </div>
 </html>
