Finished up Step Five. Steps 2-5 specifically completed. Course set complete task Wednesday January 6th 2021.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   
   <div class="cd-logo">
-    
+    <div class = "caption"> 
+      <span class = "border" > RECIPES WITH CODERDOJO         </span>
+      </div>
   </div>
   
   <div class="textSection">
@@ -42,4 +44,31 @@
     <div class = "cake-ingredients"> 
 
       </div>
+
+  
+  <div class = "textSection">
+      
+      <!--You know it had to be done...-->
+
+        <!--As soon as I was given the oppurtunity to sell a cookbook,-->
+
+          <!--The individual needs an oppurtunity to sell their soul.-->
+
+    <p> Remember! You can always purchase our cookbook for all your favorite cake recipies not mentioned in this website! Our world famous cookbook could be yours for the small, small price of seven payments of $9836.66 and 1/10th of your free will! Buy it now!
+      </p>
+
+    </div>
+
+    <div class = "cookbook"> 
+      </div>
+
+      <!-- Oh, but you know we're not done yet.-->
+
+      <div class = "textSection"> 
+        <p> Be sure to tune back in next week for our ROSECAKE RECIPE! 
+          </p>
+        </div>
+
+        <div class = "rosecake"> 
+          </div>
 </html>
